--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "macaddress": "^0.5.3",
     "mysql2": "^3.6.0",
+    "nodejs-jsencrypt": "^3.0.0-rc.1",
     "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.1"
   },
