--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines" : { 
+    "node" : "16.19.1"
+  },
   "scripts": {
     "devStart": "nodemon index.js",
     "start": "node index.js",
